# docs/swagger.json
@@ -2,13 +2,17 @@
     "swagger": "2.0",
     "info": {
         "title": "go-gin-api docs api",
-        "contact": {}
+        "contact": {},
+        "license": {
+            "name": "MIT",
+            "url": "https://github.com/xinliangnote/go-gin-api/blob/master/LICENSE"
+        }
     },
     "host": "127.0.0.1:9999",
     "paths": {
-        "/demo/user/{name}": {
-            "get": {
-                "description": "获取用户信息",
+        "/auth/get": {
+            "post": {
+                "description": "获取授权信息",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,15 +22,31 @@
                 "tags": [
                     "Demo"
                 ],
-                "summary": "获取用户信息",
+                "summary": "获取授权信息",
+                "responses": {
+                    "200": {
+                        "description": "返回信息",
+                        "schema": {
+                            "$ref": "#/definitions/demo.authResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/demo/trace": {
+            "get": {
+                "description": "Trace 示例",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Demo"
+                ],
+                "summary": "Trace 示例",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户名(Tom)",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "签名",
@@ -68,7 +88,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Demo"
+                    "User"
                 ],
                 "summary": "创建用户",
                 "parameters": [
@@ -80,6 +100,13 @@
                         "schema": {
                             "$ref": "#/definitions/user_model.CreateRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "签名",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -88,6 +115,42 @@
                         "schema": {
                             "$ref": "#/definitions/user_model.CreateResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/user/delete/{id}": {
+            "patch": {
+                "description": "删除用户 - 更新 is_deleted = 1",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "删除用户 - 更新 is_deleted = 1",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "签名",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回信息"
                     }
                 }
             }
@@ -102,7 +165,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Demo"
+                    "User"
                 ],
                 "summary": "用户详情",
                 "parameters": [
@@ -111,6 +174,13 @@
                         "description": "用户名",
                         "name": "username",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "签名",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -124,43 +194,9 @@
                 }
             }
         },
-        "/user/login": {
-            "post": {
-                "description": "用户登录",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Demo"
-                ],
-                "summary": "用户登录",
-                "parameters": [
-                    {
-                        "description": "请求信息",
-                        "name": "RequestInfo",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user_model.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "返回信息",
-                        "schema": {
-                            "$ref": "#/definitions/user_model.LoginResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/user/update": {
-            "post": {
-                "description": "更新用户名称",
+            "put": {
+                "description": "编辑用户 - 通过用户主键ID更新用户昵称",
                 "consumes": [
                     "application/json"
                 ],
@@ -168,9 +204,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Demo"
+                    "User"
                 ],
-                "summary": "更新用户名称",
+                "summary": "编辑用户 - 通过用户主键ID更新用户昵称",
                 "parameters": [
                     {
                         "description": "请求信息",
@@ -180,6 +216,13 @@
                         "schema": {
                             "$ref": "#/definitions/user_model.UpdateNickNameByIDRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "签名",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -194,6 +237,19 @@
         }
     },
     "definitions": {
+        "demo.authResponse": {
+            "type": "object",
+            "properties": {
+                "authorization": {
+                    "description": "签名",
+                    "type": "string"
+                },
+                "expire_time": {
+                    "description": "过期时间",
+                    "type": "integer"
+                }
+            }
+        },
         "user_model.CreateRequest": {
             "type": "object",
             "properties": {
@@ -238,32 +294,6 @@
                 "user_name": {
                     "description": "用户名",
                     "type": "string"
-                }
-            }
-        },
-        "user_model.LoginRequest": {
-            "type": "object",
-            "properties": {
-                "user_id": {
-                    "description": "用户ID（\u003e0）",
-                    "type": "integer"
-                },
-                "user_name": {
-                    "description": "用户名",
-                    "type": "string"
-                }
-            }
-        },
-        "user_model.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "authorization": {
-                    "description": "签名",
-                    "type": "string"
-                },
-                "expire_time": {
-                    "description": "过期时间",
-                    "type": "integer"
                 }
             }
         },
