# internal/api/controller/demo/demo.go
@@ -3,21 +3,32 @@ package demo
 import (
 	"time"
 
+	"github.com/xinliangnote/go-gin-api/configs"
 	"github.com/xinliangnote/go-gin-api/internal/api/code"
 	"github.com/xinliangnote/go-gin-api/internal/api/repository/third_party_request/go_gin_api_repo"
+	"github.com/xinliangnote/go-gin-api/internal/api/service/user_service"
+	"github.com/xinliangnote/go-gin-api/internal/pkg/cache"
 	"github.com/xinliangnote/go-gin-api/internal/pkg/core"
+	"github.com/xinliangnote/go-gin-api/internal/pkg/db"
 	"github.com/xinliangnote/go-gin-api/pkg/httpclient"
+	"github.com/xinliangnote/go-gin-api/pkg/p"
+	"github.com/xinliangnote/go-gin-api/pkg/token"
 
+	"github.com/pkg/errors"
 	"go.uber.org/zap"
 )
 
 type Demo struct {
-	logger *zap.Logger
+	logger      *zap.Logger
+	cache       cache.Repo
+	userService user_service.UserService
 }
 
-func NewDemo(logger *zap.Logger) *Demo {
+func NewDemo(logger *zap.Logger, db db.Repo, cache cache.Repo) *Demo {
 	return &Demo{
-		logger: logger,
+		logger:      logger,
+		cache:       cache,
+		userService: user_service.NewUserService(db, cache),
 	}
 }
 
@@ -35,16 +46,16 @@ func (d *Demo) Get() core.HandlerFunc {
 	return func(c core.Context) {
 		req := new(request)
 		if err := c.ShouldBindURI(req); err != nil {
-			c.AbortWithError(code.ErrParamBind)
+			c.AbortWithError(code.ErrParamBind.WithErr(err))
 			return
 		}
 
 		if req.Name != "Tom" {
-			c.AbortWithError(code.ErrUser)
+			c.AbortWithError(code.ErrUser.WithErr(errors.New("req.Name != Tom")))
 			return
 		}
 
-		c.SetPayload(code.OK.WithData(&response{
+		c.Payload(code.OK.WithData(&response{
 			Name: "Tom",
 			Job:  "Student",
 		}))
@@ -64,56 +75,70 @@ func (d *Demo) Post() core.HandlerFunc {
 	return func(c core.Context) {
 		req := new(request)
 		if err := c.ShouldBindPostForm(req); err != nil {
-			c.AbortWithError(code.ErrParamBind)
+			c.AbortWithError(code.ErrParamBind.WithErr(err))
 			return
 		}
 
 		if req.Name != "Jack" {
-			c.AbortWithError(code.ErrUser)
+			c.AbortWithError(code.ErrUser.WithErr(errors.New("req.Name != Jack")))
 			return
 		}
 
-		c.SetPayload(code.OK.WithData(&response{
+		c.Payload(code.OK.WithData(&response{
 			Name: "Jack",
 			Job:  "Teacher",
 		}))
 	}
 }
 
-type request struct {
-	Name string `uri:"name"`
+type authResponse struct {
+	Authorization string `json:"authorization"` // 签名
+	ExpireTime    int64  `json:"expire_time"`   // 过期时间
 }
 
-type response []struct {
+type traceResponse []struct {
 	Name string `json:"name"` //用户名
 	Job  string `json:"job"`  //工作
 }
 
-// Get 获取用户信息
-// @Summary 获取用户信息
-// @Description 获取用户信息
+// 获取授权信息
+// @Summary 获取授权信息
+// @Description 获取授权信息
 // @Tags Demo
 // @Accept  json
 // @Produce  json
-// @Param name path string true "用户名(Tom)"
-// @Param Authorization header string true "签名"
-// @Success 200 {object} response "用户信息"
-// @Router /demo/user/{name} [get]
-func (d *Demo) User() core.HandlerFunc {
+// @Success 200 {object} authResponse "返回信息"
+// @Router /auth/get [post]
+func (d *Demo) Auth() core.HandlerFunc {
 	return func(c core.Context) {
-		req := new(request)
-		if err := c.ShouldBindURI(req); err != nil {
-			c.AbortWithError(code.ErrParamBind)
+		cfg := configs.Get().JWT
+		tokenString, err := token.New(cfg.Secret).Sign(1, "xinliangnote", time.Hour*cfg.ExpireDuration)
+		if err != nil {
+			c.AbortWithError(code.ErrAuthorization.WithErr(err))
 			return
 		}
 
-		if req.Name != "Tom" {
-			c.AbortWithError(code.ErrUser)
-			return
-		}
+		res := new(authResponse)
+		res.Authorization = tokenString
+		res.ExpireTime = time.Now().Add(time.Hour * cfg.ExpireDuration).Unix()
 
+		c.Payload(code.OK.WithData(res))
+	}
+}
 
-		res1, err := go_gin_api_repo.DemoGet(req.Name,
+// Trace 示例
+// @Summary Trace 示例
+// @Description Trace 示例
+// @Tags Demo
+// @Accept  json
+// @Produce  json
+// @Param Authorization header string true "签名"
+// @Success 200 {object} traceResponse "用户信息"
+// @Router /demo/trace [get]
+func (d *Demo) Trace() core.HandlerFunc {
+	return func(c core.Context) {
+		// 三方请求信息
+		res1, err := go_gin_api_repo.DemoGet("Tom",
 			httpclient.WithTTL(time.Second*5),
 			httpclient.WithTrace(c.Trace()),
 			httpclient.WithLogger(c.Logger()),
@@ -123,10 +148,14 @@ func (d *Demo) User() core.HandlerFunc {
 
 		if err != nil {
 			d.logger.Error("get [demo/get] err", zap.Error(err))
-			c.AbortWithError(code.ErrUserHTTP)
+			c.AbortWithError(code.ErrUserHTTP.WithErr(err))
 			return
 		}
 
+		// 调试信息
+		p.Println("res1.Data.Name", res1.Data.Name, p.WithTrace(c.Trace()))
+
+		// 三方请求信息
 		res2, err := go_gin_api_repo.DemoPost("Jack",
 			httpclient.WithTTL(time.Second*5),
 			httpclient.WithTrace(c.Trace()),
@@ -137,11 +166,22 @@ func (d *Demo) User() core.HandlerFunc {
 
 		if err != nil {
 			d.logger.Error("post [demo/post] err", zap.Error(err))
-			c.AbortWithError(code.ErrUserHTTP)
+			c.AbortWithError(code.ErrUserHTTP.WithErr(err))
 			return
 		}
 
-		data := &response{
+		// 调试信息
+		p.Println("res2.Data.Name", res2.Data.Name, p.WithTrace(c.Trace()))
+
+		// 执行 SQL 信息
+		d.userService.GetUserByUserName(c, "test_user")
+
+		// 执行 Redis 信息
+		_ = d.cache.Set("name", "tom", time.Minute*10, cache.WithTrace(c.Trace()))
+		val, _ := d.cache.Get("name", cache.WithTrace(c.Trace()))
+		p.Println("redis-name", val, p.WithTrace(c.Trace()))
+
+		data := &traceResponse{
 			{
 				Name: res1.Data.Name,
 				Job:  res1.Data.Job,
@@ -151,6 +191,6 @@ func (d *Demo) User() core.HandlerFunc {
 				Job:  res2.Data.Job,
 			},
 		}
-		c.SetPayload(code.OK.WithData(data))
+		c.Payload(code.OK.WithData(data))
 	}
 }
