# internal/api/repository/db_repo/user_demo_repo/user_demo.go
@@ -2,8 +2,8 @@ package user_demo_repo
 
 import (
 	"github.com/xinliangnote/go-gin-api/internal/api/model/user_model"
-	"github.com/xinliangnote/go-gin-api/internal/api/repository/db_repo"
 	"github.com/xinliangnote/go-gin-api/internal/pkg/core"
+	"github.com/xinliangnote/go-gin-api/internal/pkg/db"
 
 	"github.com/pkg/errors"
 )
@@ -16,14 +16,15 @@ type UserRepo interface {
 	Create(ctx core.Context, user user_model.UserDemo) (id uint, err error)
 	UpdateNickNameByID(ctx core.Context, id uint, username string) (err error)
 	GetUserByUserName(ctx core.Context, username string) (*user_model.UserDemo, error)
+	Delete(ctx core.Context, id uint) (err error)
 	getUserByID(ctx core.Context, id uint) (*user_model.UserDemo, error)
 }
 
 type userRepo struct {
-	db db_repo.Repo
+	db db.Repo
 }
 
-func NewUserRepo(db db_repo.Repo) UserRepo {
+func NewUserRepo(db db.Repo) UserRepo {
 	return &userRepo{
 		db: db,
 	}
@@ -32,7 +33,7 @@ func NewUserRepo(db db_repo.Repo) UserRepo {
 func (u *userRepo) i() {}
 
 func (u *userRepo) Create(ctx core.Context, user user_model.UserDemo) (id uint, err error) {
-	err = u.db.GetDbW().WithContext(ctx).Create(&user).Error
+	err = u.db.GetDbW().WithContext(ctx.RequestContext()).Create(&user).Error
 	if err != nil {
 		return 0, errors.Wrap(err, "[user_repo] create user err")
 	}
@@ -41,7 +42,7 @@ func (u *userRepo) Create(ctx core.Context, user user_model.UserDemo) (id uint, 
 
 func (u *userRepo) getUserByID(ctx core.Context, id uint) (*user_model.UserDemo, error) {
 	data := new(user_model.UserDemo)
-	err := u.db.GetDbR().WithContext(ctx).First(data, id).Error
+	err := u.db.GetDbR().WithContext(ctx.RequestContext()).First(data, id).Where("is_deleted = ?", -1).Error
 	if err != nil {
 		return nil, errors.Wrap(err, "[user_demo] get user data err")
 	}
@@ -53,15 +54,23 @@ func (u *userRepo) UpdateNickNameByID(ctx core.Context, id uint, nickname string
 	if err != nil {
 		return errors.Wrap(err, "[user_demo] update user data err")
 	}
-	return u.db.GetDbW().WithContext(ctx).Model(user).Update("nick_name", nickname).Error
+	return u.db.GetDbW().WithContext(ctx.RequestContext()).Model(user).Update("nick_name", nickname).Error
+}
+
+func (u *userRepo) Delete(ctx core.Context, id uint) (err error) {
+	user, err := u.getUserByID(ctx, id)
+	if err != nil {
+		return errors.Wrap(err, "[user_demo] update user data err")
+	}
+	return u.db.GetDbW().WithContext(ctx.RequestContext()).Model(user).Update("is_deleted", 1).Error
 }
 
 func (u *userRepo) GetUserByUserName(ctx core.Context, username string) (*user_model.UserDemo, error) {
 	data := new(user_model.UserDemo)
 	err := u.db.GetDbR().
-		WithContext(ctx).
+		WithContext(ctx.RequestContext()).
 		Select([]string{"id", "user_name", "nick_name", "mobile"}).
-		Where("user_name = ?", username).
+		Where("user_name = ? and is_deleted = ?", username, -1).
 		First(data).Error
 	if err != nil {
 		return nil, errors.Wrap(err, "[user_demo] get user data err")
