# internal/api/router/router.go
@@ -3,10 +3,10 @@ package router
 import (
 	"github.com/xinliangnote/go-gin-api/internal/api/controller/demo"
 	"github.com/xinliangnote/go-gin-api/internal/api/controller/user_handler"
-	"github.com/xinliangnote/go-gin-api/internal/api/repository/cache_repo"
-	"github.com/xinliangnote/go-gin-api/internal/api/repository/db_repo"
-	auth "github.com/xinliangnote/go-gin-api/internal/api/router/middleware"
+	"github.com/xinliangnote/go-gin-api/internal/api/router/middleware/auth"
+	"github.com/xinliangnote/go-gin-api/internal/pkg/cache"
 	"github.com/xinliangnote/go-gin-api/internal/pkg/core"
+	"github.com/xinliangnote/go-gin-api/internal/pkg/db"
 	"github.com/xinliangnote/go-gin-api/internal/pkg/metrics"
 	"github.com/xinliangnote/go-gin-api/internal/pkg/notify"
 
@@ -14,7 +14,7 @@ import (
 	"go.uber.org/zap"
 )
 
-func NewHTTPMux(logger *zap.Logger, db db_repo.Repo, cache cache_repo.Repo) (core.Mux, error) {
+func NewHTTPMux(logger *zap.Logger, db db.Repo, cache cache.Repo) (core.Mux, error) {
 
 	if logger == nil {
 		return nil, errors.New("logger required")
@@ -31,20 +31,29 @@ func NewHTTPMux(logger *zap.Logger, db db_repo.Repo, cache cache_repo.Repo) (cor
 		panic(err)
 	}
 
-	demoHandler := demo.NewDemo(logger)
+	demoHandler := demo.NewDemo(logger, db, cache)
 	userHandler := user_handler.NewUserDemo(logger, db, cache)
 
-	u := mux.Group("/user")
+	// user_demo CURD
+	user := mux.Group("/user", core.WrapAuthHandler(auth.AuthHandler))
 	{
-		u.POST("/login", userHandler.Login())
-		u.POST("/create", userHandler.Create())
-		u.GET("/info/:username", core.AliasForRecordMetrics("/user/info"), userHandler.Detail())
-		u.POST("/update", userHandler.UpdateNickNameByID())
+		user.POST("/create", userHandler.Create())
+		user.PUT("/update", userHandler.UpdateNickNameByID())
+		user.PATCH("/delete/:id", userHandler.Delete())
+		user.GET("/info/:username", core.AliasForRecordMetrics("/user/info"), userHandler.Detail())
 	}
 
+	// auth
+	a := mux.Group("/auth")
+	{
+		a.POST("/get", demoHandler.Auth())
+	}
+
+	// demo
 	d := mux.Group("/demo", core.WrapAuthHandler(auth.AuthHandler)) //使用 auth 验证
 	{
-		d.GET("user/:name", core.AliasForRecordMetrics("/demo/user"), demoHandler.User())
+		// 为了演示 Trace ，增加了一些看起来无意义的调试信息和 SQL 信息。
+		d.GET("/trace", demoHandler.Trace())
 
 		// 模拟数据
 		d.GET("get/:name", core.AliasForRecordMetrics("/demo/get"), demoHandler.Get())
